<resources>
    <string name="app_name">Calculator</string>
    <string name="forgoen_password">Forgotten Password?</string>
    <string name="button_send">SEND</string>
    <string name="button_login_FB">Login with Facebook</string>
    <string name="button_login_Twitter">Login with Twitter</string>
    <string name="button_login_Google">Login with Google</string>
    <string name="registration">Registration</string>
    <string name="recover_password_text">Please, enter your email to recover password</string>
    <string name="registration_form">To book your course please fill in registration form</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="children">CHILDREN</string>
    <string name="date_of_birthday">Date of Birth</string>
    <string name="login">Your login</string>
    <string name="password">Password</string>
    <string name="children_more">More kids can be added</string>
    <string name="tab1_palindrome">Palindrome</string>
    <string name="tab2_factorial">Factorial</string>
    <string name="tab3_pairs">Pairs</string>
    <string name="text">Enter the number</string>
    <string name="calculate">Calculate</string>
    <string name="text_pairs">Enter the pairs (Example: 12 34 45 32 12 45 32 4</string>
    <string name="children_next">Next child</string>
    <string name="twitter_app_key">u5EqqF8gMIXMewpkuYSw6eQcm</string>
    <string name="twitter_app_secret">hFllwqZYUZ0guexJoy823LOjlCMfq8jjHddD9qnh7jZ9xF1V2Q</string>
    <string name="facebook_app_key">1775469139334991</string>
    <string name="facebook_app_secret">109c46e1af8c321524007a6dbf18ecf8</string>
    <string name="google_app_key">886563764310-2p7mbl7tongcm0076qrlpavg6au40qg0.apps.googleusercontent.com</string>
    <string name="google_app_secret">14g7wGeX2SZ_DhILkByCEFkl</string>
    <string name="quit">Quit and logout</string>


</resources>
