<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_right_left_margin"
        android:layout_marginRight="@dimen/activity_right_left_margin"
        android:layout_marginTop="45dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/registration_form"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text"
            android:drawableLeft="@mipmap/ic_account_outline"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:hint="@string/first_name"
            android:textColorHint="@color/colorWhite"/>
        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/edit_text"
            android:drawableLeft="@mipmap/ic_account_outline"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:hint="@string/last_name"
            android:textColorHint="@color/colorWhite"/>
        <EditText
            android:id="@+id/email_for_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/edit_text"
            android:drawableLeft="@mipmap/ic_email_outline"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:hint="@string/email"
            android:textColorHint="@color/colorWhite"/>
        <EditText
            android:id="@+id/phone_for_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/edit_text"
            android:drawableLeft="@mipmap/ic_cellphone_android"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/colorWhite"
            android:hint="@string/phone"
            android:textColorHint="@color/colorWhite"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="left"
            android:text="@string/children"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/child_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text"
            android:drawableLeft="@mipmap/ic_account_outline"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:hint="@string/first_name"
            android:textColorHint="@color/colorWhite"/>
        <EditText
            android:id="@+id/child_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text"
            android:drawableLeft="@mipmap/ic_calendar"
            android:inputType="date"
            android:textColor="@color/colorWhite"
            android:hint="@string/date_of_birthday"
            android:textColorHint="@color/colorWhite"/>
        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text"
            android:drawableLeft="@mipmap/ic_account_outline"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:hint="@string/login"
            android:textColorHint="@color/colorWhite"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text"
            android:drawableLeft="@mipmap/ic_lock_outline"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:hint="@string/password"
            android:textColorHint="@color/colorWhite"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:layout_anchorGravity="bottom|right|top"
                android:background="@color/colorAccent"
                android:src="@mipmap/ic_plus" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="left"
                android:text="@string/children_more"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/button_send"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>