<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="35sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_blue"
            android:drawableLeft="@mipmap/ic_account_outline"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_blue"
            android:drawableLeft="@mipmap/ic_lock_outline"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgotenPassword"
            android:layout_marginTop="25dp"
            android:gravity="right"
            android:text="@string/forgoen_password"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
        <Button
            android:id="@+id/btSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/button_send"
            android:layout_marginTop="35dp"
            android:textColor="@color/colorWhite"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginFB"
                android:background="@color/colorPrimary"
                android:text="@string/button_login_FB"
                android:textSize="15sp"
                android:drawableTop="@mipmap/ic_facebook_box"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"/>
            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/colorWhite" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginGoogle"
                android:background="@color/colorPrimary"
                android:text="@string/button_login_Google"
                android:textSize="15sp"
                android:drawableTop="@mipmap/ic_google_plus"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"/>
            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/colorWhite" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginTwitter"
                android:background="@color/colorPrimary"
                android:text="@string/button_login_Twitter"
                android:textSize="15sp"
                android:drawableTop="@mipmap/ic_twitter"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>
        <TextView
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/registration"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>
