<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="3dp"
            android:text="@string/children_next"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/child_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/edit_text_blue"
            android:drawableLeft="@mipmap/ic_account_outline"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:hint="@string/first_name"
            android:textColorHint="@color/colorWhite"/>
        <EditText
            android:id="@+id/child_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_blue"
            android:drawableLeft="@mipmap/ic_calendar"
            android:inputType="date"
            android:textColor="@color/colorWhite"
            android:hint="@string/date_of_birthday"
            android:textColorHint="@color/colorWhite"/>
    </LinearLayout>


</LinearLayout>